Fix Sonar Check